fix spacing gauge

--- a/fl_auth_signup/static/css/password-check.css
+++ b/fl_auth_signup/static/css/password-check.css
@@ -90,4 +90,5 @@
 
 #popover-password {
   color: #464646;
+  margin-top: 20px;
 }
